** ignore -b files in coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
   - raco test $TRAVIS_BUILD_DIR
 
 after_success:
-  - raco cover -f coveralls -d $TRAVIS_BUILD_DIR/coverage .
+  - raco cover -b -f coveralls -d $TRAVIS_BUILD_DIR/coverage .
