--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,6 @@ script:
 
 after_success:
   - raco setup --check-deps zordoz
+  - raco pkg install --deps search-auto cover
+  - raco pkg install --deps search-auto cover-coveralls
   - raco cover -b -f coveralls -d $TRAVIS_BUILD_DIR/coverage .
