--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install: raco pkg install --deps search-auto $TRAVIS_BUILD_DIR
 
 script:
   - raco test $TRAVIS_BUILD_DIR
-  - raco setup --check-deps zordoz
+  - raco setup --check-pkg-deps zordoz
 
 after_success:
   - raco pkg install --deps search-auto cover
